<resources>
    <string name="app_name">Icelandic Weather App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_attractions">Attractions</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sun">Dagsbirta</string>
    <string name="menu_earthquake">Jarðskjálftar</string>
    <string name="menu_volcanos">Eldgos</string>
    <string name="menu_map">Kort</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_glaciers">Glaciers</string>
    <string name="menu_northern_lights">Northern Lights</string>

    <string name="weather_alerts">Weather Alerts</string>
    <string name="volcano_alerts">Volcano Alerts</string>
    <string name="earthquake_alerts">Earthquake Alerts</string>
    <string name="road_alerts">Road Alerts</string>

    <string name="glacier_attraction">Glaciers</string>
    <string name="northern_lights_attraction">Northern Lights</string>

    <string name="sun_up">Sólarupprás: %1$s</string>
    <string name="sun_down">Sólarlag: %1$s</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="buttonearthquake">Jarðskjálftakort</string>
    <string name="buttonvolcano">Eldfjallakort</string>
    <string name="buttonroads">Vegakort</string>
    <string name="buttonweatheralerts">Veður viðvarana kort</string>
    <string name="kortinfobutsmaller">Veldu kort til að skoða</string>
    <string name="kortinfo"><![CDATA[Veldu kort til að skoða, hvert kort er með pinna sem segja frá eldfjallinu eða jarðskjálftanum ef ýtt er á pinnan. Litirnir gefa til kynna hversu alvarlegt það er, í þessari röð frá engin hætta í mestu hættu grænn -> gulur -> appelsínugulur -> rauður.]]></string>
    <string name="stillingar">Stillingar:</string>
    <string name="hitastig">Hitastig:</string>
    <string name="celc_us_c">Celcíus - °C</string>
    <string name="fahrenheit_f">Fahrenheit - °F</string>

</resources>