<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_locations"
        android:icon="@drawable/ic_map_24dp"
        android:title="@string/menu_locations" />

    <item
        android:id="@+id/nav_attractions"
        android:icon="@drawable/ic_iceland"
        android:title="@string/menu_attractions" />

    <item
        android:id="@+id/nav_alerts_menu"
        android:icon="@drawable/ic_warning_24dp"
        android:title="@string/menu_alerts" />

    <item
        android:id="@+id/nav_sun"
        android:icon="@drawable/ic_sun_24dp"
        android:title="@string/menu_sun" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_iceland"
        android:title="@string/menu_map" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_sun"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_sun" />

        <item
            android:id="@+id/nav_earthquake"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_earthquake" />

        <item
            android:id="@+id/nav_volcano"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_volcanos" />
    </group>
</menu>