<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cardVedur"
        android:text="@string/weather_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cardVolcano"
        android:text="@string/volcano_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cardEarthquake"
        android:text="@string/earthquake_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cardRoad"
        android:text="@string/road_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>