<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_locations">

    <fragment
        android:id="@+id/nav_attractions"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.attractions.AttractionsMenuFragment"
        android:label="@string/menu_attractions"
        tools:layout="@layout/fragment_attractions_menu">

        <action
            android:id="@+id/action_attractions_to_glacier"
            app:destination="@+id/glacierFragment"/>

        <action
            android:id="@+id/action_attractions_to_northernLights"
            app:destination="@+id/northernLightsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/glacierFragment"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.attractions.GlacierFragment"
        android:label="@string/glacier_attraction"/>

    <fragment
        android:id="@+id/northernLightsFragment"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.attractions.NorthernLightsFragment"
        android:label="@string/northern_lights_attraction"/>



    <fragment
        android:id="@+id/nav_locations"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations">

        <action
            android:id="@+id/action_locationsFragment_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_alerts_menu"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.alerts.AlertsMenuFragment"
        android:label="@string/menu_alerts"
        tools:layout="@layout/fragment_alerts_menu">

        <action
            android:id="@+id/action_alertsMenu_to_weatherAlertsFragment"
            app:destination="@+id/weatherAlertsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/weatherAlertsFragment"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.alerts.WeatherAlertsFragment"
        android:label="Vedur Alerts" />

    <fragment
        android:id="@+id/roadAlertsFragment"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.alerts.RoadFragment"
        android:label="@string/road_alerts"
        tools:layout="@layout/fragment_road"/>

    <fragment
        android:id="@+id/nav_sun"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.sun.SunFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_sun" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="is.hi.hbv601g.icelandicweatherapp.ui.locations.LocationDetailsFragment"
        android:label="Forecast"
        tools:layout="@layout/fragment_location_details">

        <argument
            android:name="locationName"
            app:argType="string" />

        <argument
            android:name="latitude"
            app:argType="float" />

        <argument
            android:name="longitude"
            app:argType="float" />

    </fragment>


</navigation>