<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonearthquake"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonearthquake"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonvolcano" />

    <Button
        android:id="@+id/buttonvolcano"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonvolcano"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonearthquake"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/info"
        android:text="@string/kortinfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonearthquake"
        app:layout_constraintBottom_toTopOf="@+id/mapId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mapId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintBottom_toTopOf="@+id/mapviewEarhquake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <org.osmdroid.views.MapView
        android:id="@+id/mapviewEarhquake"
        tilesource="Mapnik"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mapId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />


</androidx.constraintlayout.widget.ConstraintLayout>