<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonearthquake"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonearthquake"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonvolcano" />

    <Button
        android:id="@+id/buttonvolcano"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonvolcano"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonearthquake"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonroads"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonroads"
        app:layout_constraintTop_toBottomOf="@+id/buttonearthquake"
        app:layout_constraintEnd_toStartOf="@+id/buttonweatheralerts"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonweatheralerts"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/buttonweatheralerts"
        app:layout_constraintTop_toBottomOf="@+id/buttonvolcano"
        app:layout_constraintStart_toEndOf="@+id/buttonroads"
        app:layout_constraintEnd_toEndOf="parent" />



    <TextView
        android:id="@+id/info"
        android:text="@string/kortinfobutsmaller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonroads"
        app:layout_constraintBottom_toTopOf="@+id/mapId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/roadLegend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <View
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/road_greidfart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Greiðfært"
                android:paddingStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <View
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/road_halt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hált"
                android:paddingStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <View
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/road_ofaert"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ófært"
                android:paddingStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mapId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/roadLegend"
        app:layout_constraintBottom_toTopOf="@+id/mapviewmenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




    <org.osmdroid.views.MapView
        android:id="@+id/mapviewmenu"
        tilesource="Mapnik"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mapId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />


</androidx.constraintlayout.widget.ConstraintLayout>